fixed minor issue

--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
         },
         axisX:{
             title:"Time",
-            valueFormatString: "DD MMM YYYY",
-            interval: 25,
-            intervalType: "hour"
+            valueFormatString: "DD MMM YYYY"
         },
         axisY: {
             title: "Minutes",
