--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             console.log(data)
             allData = data;
             addChartHistogram()
-            addChartAreaSpline()
+            // addChartAreaSpline()
             addChartCumulativeHistogram()
             addTableDataRaw()
         })
